06/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated version and dependency info

04/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 1433905. I implemented end of line markers when I didn't need
      to. And I implemented them wrong, introducing this bug.

02/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 1433918. The JEditTextArea now creates a new set of defaults
      for each instance of JEditTextArea. Each new text area was using the same
      InputHandler instance so the key bindings for each text area were being
      overridden.

02/11/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added end of line markers and and option to turn them on or off.
    * Added support for maintaining indent when adding new lines
    * Implemented maintaining indent when adding new lines and soft tabs
      by adding key bindings to the input handler rather than overriding
      processKeyEvent or whatever

02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed some syntax highlighting problems with DTDs that have internal
      subsets.

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added support for smart HOME/END. HOME and END will now
      take you to the first/last non-whitespace characters.

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added localized messages to the view. jsXe now supports views having their
      own localized messages.

01/30/2005  Ian Lewis   <Ian Lewis@member.fsf.org>

    * Added the goToLine() method to SourceView to maintain the contract for
      DocumentView

05/18/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Enhanced the syntax highlighting to support highlighting namespace
      prefixes and markup.
    * The source view now highlights ]]> in text as invalid because it is.
    * Fixed bug that caused attribute values to be highlighted incorrectly if
      the attribute had different types of quotes in it. Like
      value="blah='test'"
